--- a/backend/package.json
+++ b/backend/package.json
@@ -1,10 +1,12 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "type": "module",
+  "main": "src/server.js",
   "scripts": {
-    "dev" : "nodemon src/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/server.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/server.js"
   },
   "keywords": [],
   "author": "",
@@ -13,8 +15,10 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
-    "express": "^5.1.0",
-    "mongoose": "^8.18.0",
+    "express": "^4.18.2",
+    "mongoose": "^8.14.3"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.10"
   }
 }
