--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-Mongo_uri="mongodb+srv://mardavjain07_db_user:JAV6w7j7uF4HzrUg@cluster0.plh6e9x.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
-port =3000
+Mongo_uri=mongodb+srv://mardavjain07_db_user:JAV6w7j7uF4HzrUg@cluster0.plh6e9x.mongodb.net/CrowdFunding?retryWrites=true&w=majority&appName=Cluster0
+port=3000
