--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,10 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^4.18.2",
-    "mongoose": "^8.14.3"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.14.3",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
