Added Payment API

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,8 @@
-Mongo_uri="mongodb+srv://mardavjain07_db_user:JAV6w7j7uF4HzrUg@cluster0.plh6e9x.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
-port =3000
+﻿
+Mongo_uri="mongodb+srv://mardavjain07_db_user:JAV6w7j7uF4HzrUg@cluster0.plh6e9x.mongodb.net/CrowdFunding?retryWrites=true&w=majority&appName=Cluster0"
+
+RAZORPAY_KEY_ID=rzp_test_RHBbdXi0q4bAQt
+RAZORPAY_KEY_SECRET=pGPe5ek2HXPJb66syHF2NMjX
+
+
+PORT=3000
