--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@auth0/auth0-react": "^2.4.0",
     "@gsap/react": "^2.1.2",
+    "@splidejs/react-splide": "^0.7.12",
+    "@splidejs/splide-extension-auto-scroll": "^0.5.3",
     "@splinetool/react-spline": "^4.1.0",
     "@tailwindcss/vite": "^4.1.13",
     "gsap": "^3.13.0",
