Profile Page & Chat Component are not responsive (integrated with backend)

--- a/backend/.env
+++ b/backend/.env
@@ -6,3 +6,7 @@ Google_client_Secret=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
 Callback_URL=http://localhost:3000/auth/google/callback
 
 jwt_secret_key=cc1adffae3677622fce019651a67dc4f
+
+cloudinary_api_key=365479721763718
+cloudinary_api_secret=DHjLaxDlw3C2XzQeybo-7To-kO0
+cloudinary_name=dfennlxkk
