--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,19 +16,24 @@
     "@splinetool/react-spline": "^4.1.0",
     "@tailwindcss/vite": "^4.1.13",
     "antd": "^5.27.5",
+    "axios": "^1.12.2",
     "bootstrap": "^5.3.8",
+    "check-password-strength": "^3.0.0",
     "gsap": "^3.13.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.544.0",
     "motion": "^12.23.22",
     "primereact": "^10.9.7",
     "quill": "^2.0.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hot-toast": "^2.6.0",
     "react-player": "^3.3.3",
     "react-responsive": "^10.0.1",
     "react-router-dom": "^7.8.2",
     "rsuite": "^5.83.3",
-    "tailwindcss": "^4.1.13"
+    "tailwindcss": "^4.1.13",
+    "validator": "^13.15.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
