--- a/backend/.env
+++ b/backend/.env
@@ -10,3 +10,11 @@ jwt_secret_key=cc1adffae3677622fce019651a67dc4f
 cloudinary_api_key=365479721763718
 cloudinary_api_secret=DHjLaxDlw3C2XzQeybo-7To-kO0
 cloudinary_name=dfennlxkk
+
+razorpay_key_id=rzp_test_RHBbdXi0q4bAQt
+razorpay_key_secret=pGPe5ek2HXPJb66syHF2NMjX
+
+user_email=th3var@gmail.com
+user_pass=mocy lnev aclx mhdd
+
+
