--- a/backend/package.json
+++ b/backend/package.json
@@ -28,7 +28,8 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
-    "passport-oauth": "^1.0.0"
+    "passport-oauth": "^1.0.0",
+    "razorpay": "^2.9.6"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
