--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.12.2",
     "bootstrap": "^5.3.8",
     "check-password-strength": "^3.0.0",
+    "dotenv": "^17.2.3",
     "gsap": "^3.13.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.544.0",
@@ -29,8 +30,10 @@
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
     "react-player": "^3.3.3",
+    "react-razorpay": "^3.0.1",
     "react-responsive": "^10.0.1",
     "react-router-dom": "^7.8.2",
+    "react-viewer": "^3.2.2",
     "rsuite": "^5.83.3",
     "tailwindcss": "^4.1.13",
     "validator": "^13.15.15"
