Worked on the auth component ( anmiation ), modified the rich text editor and cleaned up the code

--- a/backend/.env
+++ b/backend/.env
@@ -17,4 +17,6 @@ razorpay_key_secret=pGPe5ek2HXPJb66syHF2NMjX
 user_email=th3var@gmail.com
 user_pass=mocy lnev aclx mhdd
 
+NODE_ENV=development
+
 
